@@ -8,12 +8,12 @@ import java.util.List;
 /**
  * The PerlScriptEngineFactory class is an implementation of the ScriptEngineFactory interface.
  * It is responsible for creating instances of the PerlScriptEngine and providing metadata about the engine.
- *
+ * <p>
  * This class provides the necessary methods to:
  * - Create new instances of the PerlScriptEngine.
  * - Provide information about the scripting engine, such as its name, version, and supported MIME types.
  * - List the names and extensions associated with the Perl scripting language.
- *
+ * <p>
  * By implementing ScriptEngineFactory, this class allows the PerlScriptEngine to be discovered and used
  * by the Java Scripting API (JSR 223) framework.
  */
@@ -36,7 +36,7 @@ public class PerlScriptEngineFactory implements ScriptEngineFactory {
 
     @Override
     public List<String> getMimeTypes() {
-        return Arrays.asList("application/x-perl");
+        return List.of("application/x-perl");
     }
 
     @Override
